# CodeLearn-Agent

./: .gitignore  README.md  pyproject.toml
codelearn/: base.py  config.py  config.yml
codelearn/agents/: agent_bot.py  code_agent.py  question_solve.py
codelearn/chains/: code_retriever_chain.py  doc_retriever_chain.py  multi_retriever_chain.py
codelearn/example/: ask_agent.py  ask_code_chain.py  ask_code_webui.py  custom_agent_demo.py  github_repo_retriever.py
codelearn/example/gpts_action/: api.py  config.py  main.py  model.py
codelearn/index/: code_indexer.py  doc_indexer.py  indexer.py
codelearn/llm/: ask.py
codelearn/loader/: folder_loader.py  github_loader.py  loader.py
codelearn/project/: file.py  project.py  project_manager.py
codelearn/retrieval/: code_retriever.py  doc_retriever.py  multi_retriever.py  retriever.py
codelearn/splitter/: code_splitter.py  doc_splitter.py  splitter.py
codelearn/storage/: project_db.py  project_storage.py  vector.py
codelearn/tools/: code_search.py  directory_struct_view.py  file_content_view.py  project_struct_view.py
codelearn/utils/: clearn_task_queue.py  file_util.py
storage/local_project/faiss/69843d5d-1e3d-4b54-a92e-f9573a875c93/: code.faiss  code.pkl
storage/local_project/faiss/d7aff7a6-a403-4ad8-8e0e-489cc3ce5bf1/: code.faiss  code.pkl
storage/local_project/projects/https___github_com_FISHers6_swim/swim-main/: Cargo.toml  LICENSE  README.md
storage/local_project/projects/https___github_com_FISHers6_swim/swim-main/src/: chain.rs  handler.rs  request.rs  response.rs  router.rs
(+5 files in other folders)
