[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "*"
hyper = {version = "*", features=["server", "tcp", "http1", "http2"]}
tokio = { version = "1", features = ["macros"] }
async-trait = "*"
route-recognizer = "0.1"
futures-util = "0.3"
mime = "0.3"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
serde_derive = "1.0"